2007-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/conf.spec:
	* gaupol/gtk/actions/position.py:
	* gaupol/gtk/actions/spellcheck.py:
	* gaupol/gtk/actions/view.py:
	* gaupol/gtk/agents/open.py:
	* gaupol/gtk/agents/preview.py:
	* gaupol/gtk/agents/view.py:
	* gaupol/gtk/conf/__init__.py:
	* gaupol/gtk/dialogs/duration.py:
	* gaupol/gtk/dialogs/file/open.py:
	* gaupol/gtk/dialogs/language.py:
	* gaupol/gtk/dialogs/preferences.py:
	* gaupol/gtk/dialogs/search.py:
	* gaupol/gtk/dialogs/spellcheck.py:
	* gaupol/gtk/dialogs/textedit.py:
	* gaupol/gtk/dialogs/transform.py:
	* gaupol/gtk/util.py:
	* gaupol/gtk/view.py:
	Rename several configuration variables.

2007-06-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/actions/action.py:
	* gaupol/gtk/actions/format.py:
	* gaupol/gtk/actions/__init__.py:
	* gaupol/gtk/actions/menu.py:
	* gaupol/gtk/actions/view.py:
	Fix all unfinished parts marked with "FIX:".

2007-06-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/__init__.py:
	* gaupol/gtk/main.py:
	Move stuff from main to __init__ and clean up code.

2007-06-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/duration-dialog.glade:
	* data/glade/framerate-dialog.glade:
	* data/glade/shift-dialog.glade:
	* data/glade/transform-dialog.glade:
	* gaupol/agents/position.py:
	* gaupol/gtk/agents/edit.py:
	* gaupol/gtk/agents/__init__.py:
	* gaupol/gtk/agents/position.py:
	* gaupol/gtk/agents/util.py:
	* gaupol/gtk/dialogs/duration.py:
	* gaupol/gtk/dialogs/framerate.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/shift.py:
	* gaupol/gtk/dialogs/transform.py:
	Add contracts and clean up code.

2007-06-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/spellcheck-dialog.glade:
	Redesign the whole dialog.

	* gaupol/gtk/agents/__init__.py:
	* gaupol/gtk/agents/spellcheck.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/spellcheck.py:
	Add contracts and clean up code.

	* gaupol/gtk/dialogs/search.py (_set_text):